--- a/de.netpage.markdown-maven-plugin/pom.xml
+++ b/de.netpage.markdown-maven-plugin/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Module Parent -->
@@ -13,15 +14,14 @@
     </parent>
 
     <!-- Module Settings -->
-    <artifactId>markdown</artifactId>
+    <artifactId>markdown-maven-plugin</artifactId>
 
     <!-- Module Description -->
-    <name>MarkDown-Library</name>
-    <description>Tool zum Transformieren von MarkDown-Datein in HTML oder PDF.</description>
+    <name>MarkDown-Maven-Plugin</name>
+    <description>Maven-Plugin zum Transformieren von MarkDown-Datein.</description>
 
     <!-- Package -->
-    <packaging>jar</packaging>
-
+    <packaging>maven-plugin</packaging>
 
     <!-- Build Settings -->
     <build>
@@ -41,14 +41,6 @@
                                 <include>**/*.pdf</include>
                             </includes>
                         </fileset>
-                        <fileset>
-                            <directory>${basedir}/src/test/samples</directory>
-                            <followSymlinks>false</followSymlinks>
-                            <includes>
-                                <include>**/*.html</include>
-                                <include>**/*.pdf</include>
-                            </includes>
-                        </fileset>
                     </filesets>
                 </configuration>
             </plugin>
@@ -59,29 +51,20 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
 
+            <!-- Build Setup for Maven Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.4</version>
+                <configuration>
+                    <goalPrefix>markdown</goalPrefix>
+                </configuration>
+            </plugin>
+
             <!-- Encoding of resource files -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-            </plugin>
-
-            <!-- Main-Class in jar -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <finalName>markdown</finalName>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <mainClass>de.netpage.markdown.Main</mainClass>
-                            <packageName>de.netpage.markdown</packageName>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                        </manifest>
-                    </archive>
-                </configuration>
             </plugin>
 
             <!-- Packing Sources -->
@@ -90,30 +73,22 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
-            <!-- Packaging distribution -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>distribution.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!-- Packaging libs -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
+
+            <!-- Tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+
+            <!-- Code Coverage -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
             </plugin>
 
             <!-- Compile MarkDown as HTML -->
@@ -142,63 +117,32 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!-- Tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-
-            <!-- Code Coverage -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
         </plugins>
     </build>
 
     <!-- Dependencies -->
     <dependencies>
-        <!-- Logging -->
+        <!-- Module Dependency -->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>de.netpage</groupId>
+            <artifactId>markdown</artifactId>
         </dependency>
 
-        <!-- Commons -->
+        <!-- Maven Plugin API -->
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
         </dependency>
 
-        <!-- Markdown4j-->
         <dependency>
-            <groupId>org.commonjava.googlecode.markdown4j</groupId>
-            <artifactId>markdown4j</artifactId>
-        </dependency>
-
-        <!-- Pdf -->
-        <dependency>
-            <groupId>org.xhtmlrenderer</groupId>
-            <artifactId>flying-saucer-pdf</artifactId>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
         </dependency>
 
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
         </dependency>
     </dependencies>
 
