--- a/de.netpage.markdown/pom.xml
+++ b/de.netpage.markdown/pom.xml
@@ -6,9 +6,9 @@
 
     <!-- Module Parent -->
     <parent>
-        <groupId>de.netpage</groupId>
+        <groupId>de.netpage.markdown</groupId>
         <artifactId>markdown-parent</artifactId>
-        <version>0.4</version>
+        <version>0.5-snapshot</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
