--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-# General Files/Folders
-*.class
+# IDE Settings #
+/.settings
+/.project
+/.classpath
+/.idea
+/bin
+/target
 *.iml
-sonar-project.properties
-.idea/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+sonar-project.properties
+
+# Java Classes #
+*.class
 
 # Package Files #
 *.jar
