--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Project Settings -->
-    <groupId>de.netpage</groupId>
+    <groupId>de.netpage.markdown</groupId>
     <artifactId>markdown-parent</artifactId>
-    <version>0.4</version>
+    <version>0.5-snapshot</version>
 
     <!-- Module Description -->
     <name>MarkDown-Parent</name>
@@ -230,9 +230,9 @@
         <dependencies>
             <!-- Module Dependency -->
             <dependency>
-                <groupId>de.netpage</groupId>
+                <groupId>de.netpage.markdown</groupId>
                 <artifactId>markdown</artifactId>
-                <version>0.4</version>
+                <version>0.5-snapshot</version>
             </dependency>
 
             <!-- Logging -->
