--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <groupId>de.netpage.superpom</groupId>
         <artifactId>superpom</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>pom-parent.xml</relativePath>
     </parent>
 
     <!-- Project Settings -->
